# codex-sub

./: README.md  example.py  pyproject.toml
.github/workflows/: publish.yml
codex_sub/: auth.py  client.py
