[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-sub"
version = "0.1.0"
description = "Use your OpenAI Codex subscription as an API — no API key required"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["openai", "codex", "llm", "extraction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Asing1001/codex-sub"
Repository = "https://github.com/Asing1001/codex-sub"
Issues = "https://github.com/Asing1001/codex-sub/issues"
